--- a/MOD3-Solution/index.html
+++ b/MOD3-Solution/index.html
@@ -17,7 +17,7 @@
     <body>
         <header>
           <nav id="header-nav">
-              <div class="container-fluid">
+              <div id ="Nav_Top" class="container-fluid">
                 <div class ="navbar navbar-brand">
                     <a href="index.html">
                       <div id="company-name">
@@ -33,7 +33,7 @@
                     </button>
               
                   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                   <ul id="nav-list" class="navbar-nav navbar-right ">
+                   <ul id="nav-list" class="navbar-nav">
                     <li class="nav-item ">
                       <a class="nav-link" href="#">Chicken</a>
                     </li>
@@ -50,6 +50,26 @@
           </nav><!--end of header-nav -->
         </header>
         
+        <div id="Middle"><h1>MENU</h1></div>
+
+        <div id ="Main-content" class="container-fluid">
+           <div class="box-order">
+               <span id="Chicken_1" class ="Food_Title"><h3>Chicken</h3></span>
+               <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas turpis sem, facilisis non laoreet a, varius ut nisl. Ut fermentum, est vel varius luctus, mi nunc condimentum urna, a scelerisque justo sapien in felis. Integer id gravida diam. Aenean ornare eros enim, vehicula fringilla massa tempor id. Vivamus euismod purus ac enim blandit, vitae scelerisque purus vestibulum. In bibendum, ipsum ut tristique blandit, enim justo sollicitudin urna, quis scelerisque lorem lorem eget nisl. Nullam ultricies libero vel vehicula facilisis. Vivamus sed est et dolor imperdiet facilisis non in libero. Nunc eu sapien pellentesque, dictum velit in, hendrerit nisl. Nulla vulputate quam convallis lobortis porta. Integer at suscipit leo. Aenean ac tincidunt lectus, a sagittis ligula. Ut odio nunc, fermentum non commodo at, accumsan eu libero. Pellentesque condimentum nulla a dui consequat, non vehicula lorem luctus. Fusce eleifend urna nec pulvinar ornare. Nullam eu nunc ut dui eleifend gravida ac a est.</p>
+               <button class="btn btn-default"><a href="#Nav_Top">BACK TO TOP</a></button>
+              </div>
+           <div class="box-order">
+               <span id="Beef_2" class ="Food_Title"><h3>Beef</h3></span>
+               <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas turpis sem, facilisis non laoreet a, varius ut nisl. Ut fermentum, est vel varius luctus, mi nunc condimentum urna, a scelerisque justo sapien in felis. Integer id gravida diam. Aenean ornare eros enim, vehicula fringilla massa tempor id. Vivamus euismod purus ac enim blandit, vitae scelerisque purus vestibulum. In bibendum, ipsum ut tristique blandit, enim justo sollicitudin urna, quis scelerisque lorem lorem eget nisl. Nullam ultricies libero vel vehicula facilisis. Vivamus sed est et dolor imperdiet facilisis non in libero. Nunc eu sapien pellentesque, dictum velit in, hendrerit nisl. Nulla vulputate quam convallis lobortis porta. Integer at suscipit leo. Aenean ac tincidunt lectus, a sagittis ligula. Ut odio nunc, fermentum non commodo at, accumsan eu libero. Pellentesque condimentum nulla a dui consequat, non vehicula lorem luctus. Fusce eleifend urna nec pulvinar ornare. Nullam eu nunc ut dui eleifend gravida ac a est.</p>
+               <button class="btn btn-default"><a href="#Nav_Top">BACK TO TOP</a></button>          
+              </div>
+           <div class="box-order">
+               <span id="Sushi_3" class ="Food_Title"><h3>Sushi</h3></span>
+               <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas turpis sem, facilisis non laoreet a, varius ut nisl. Ut fermentum, est vel varius luctus, mi nunc condimentum urna, a scelerisque justo sapien in felis. Integer id gravida diam. Aenean ornare eros enim, vehicula fringilla massa tempor id. Vivamus euismod purus ac enim blandit, vitae scelerisque purus vestibulum. In bibendum, ipsum ut tristique blandit, enim justo sollicitudin urna, quis scelerisque lorem lorem eget nisl. Nullam ultricies libero vel vehicula facilisis. Vivamus sed est et dolor imperdiet facilisis non in libero. Nunc eu sapien pellentesque, dictum velit in, hendrerit nisl. Nulla vulputate quam convallis lobortis porta. Integer at suscipit leo. Aenean ac tincidunt lectus, a sagittis ligula. Ut odio nunc, fermentum non commodo at, accumsan eu libero. Pellentesque condimentum nulla a dui consequat, non vehicula lorem luctus. Fusce eleifend urna nec pulvinar ornare. Nullam eu nunc ut dui eleifend gravida ac a est.</p>
+               <button class="btn btn-default"><a href="#Nav_Top">BACK TO TOP</a></button>
+              </div> 
+        </div>
+
         <footer>
 
         </footer>
