--- a/MOD3-Solution/index.html
+++ b/MOD3-Solution/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" tittle="">
         <meta name="viewport" content="width-device =width,initial-scale=1" >
         <meta content="IE-Edge" http-equiv="X-UA-Compatible">
-        <title></title>
+        <title>FOOD, LLC</title>
 
         <link rel="stylesheet" href="css/bootstrap.min.css" >
         <link rel="stylesheet" href="css/Proj-3.css" >
