--- a/MOD4-Solution/Prac_4.html
+++ b/MOD4-Solution/Prac_4.html
@@ -3,10 +3,12 @@
     <head>
     <meta charset="utf-8">    
         <title>Intro to Javascript</title>
+        <script src="js/prAc_4.js"></script>
+        <script> console.log(x); </script>
     </head>
     <body>
         <h1>Hello World</h1>
-        <script src=""></script>
-        console.log(z)
+        <script> console.log("hello!");</script>
+        
     </body>
 </html>
