added another JS script

--- a/MOD5-Solution/Prac_5.html
+++ b/MOD5-Solution/Prac_5.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Practice</title>
+        <script src = "ajax-utils.js"></script>
         <script src="prAc_5.js"></script>
     </head>
     <body>
